# StudySolo-Dev

./: .editorconfig  .env.local.example  .gitattributes  .gitignore  .gitmodules  .postman.json  AGENTS.md  CURSOR_MCP_SETUP.md  MCP_AGENT_SKILLS_SETUP_FINAL.md  MCP_INTEGRATION_COMPLETE.md  MCP_QUICK_REFERENCE.md  MCP_SETUP.md  README.md  SECURITY_ISSUE.md  SECURITY_ISSUES.md  SECURITY_ISSUE_REPORT.md  SECURITY_REPORT.md  SUPABASE_MCP_UPDATE.md  WORKFLOW_NODE_LONG_TASK_REMAINING.md  bandit_report.json  bandit_results.json  security_audit_report.md  security_issue.md  security_issues.md  security_report.md  send_issue.py  项目说明书-华科AI智能体大赛.md
agents/deep-research-agent/: .env.example  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test-results-agent-deep-research.txt
agents/deep-research-agent/src/: config.py  main.py  router.py
agents/deep-research-agent/src/core/: agent.py
agents/deep-research-agent/src/endpoints/: completions.py  files.py
agents/deep-research-agent/src/schemas/: request.py
agents/deep-research-agent/tests/: conftest.py  test_contract.py  test_schemas_property.py
agents/news-agent/: .env.example  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test-results-agent-news.txt
agents/news-agent/src/: config.py  last30days.py  main.py
agents/news-agent/src/core/: agent.py
agents/news-agent/src/core/news/: __init__.py  api_chat.py  (+7 more)
agents/news-agent/src/endpoints/: completions.py
agents/news-agent/tests/: conftest.py  test_contract.py  test_models_property.py
(+878 files in other folders)
