[project]
name = "deep-research-agent"
version = "0.1.0"
description = "StudySolo deep research agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.7.0",
  "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
